@@ -16,12 +16,12 @@
 		</dict>
 	</array>
 	<key>fileHierarchyDrawerWidth</key>
-	<integer>277</integer>
+	<integer>294</integer>
 	<key>metaData</key>
 	<dict/>
 	<key>showFileHierarchyDrawer</key>
 	<true/>
 	<key>windowFrame</key>
-	<string>{{639, 75}, {899, 1092}}</string>
+	<string>{{639, 71}, {926, 1096}}</string>
 </dict>
 </plist>
