@@ -1,3 +1,8 @@
+2007-07-29  Satoshi Nakagawa <artension@gmail.com>
+
+	Added Growl notifications.
+	Added message length check for quick join.
+
 2007-07-28  Satoshi Nakagawa <artension@gmail.com>
 
 	Released 0.8.
